City Search Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,23 @@
 <div style="text-align:center">
-  <h1>
+  <mat-toolbar color="primary">
     Local Weather
-  </h1>
+  </mat-toolbar>
   <div>
     Your city, your forecast, right now!
   </div>
-  <h2>
-    Current Weather
-  </h2>
-  <app-current-weather></app-current-weather>
+  <div fxLayoutAlign="center">
+    <app-city-search></app-city-search>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fvFlex></div>
+    <div fvFlex="300px">
+      <mat-card>
+        <h2>
+          Current Weather
+        </h2>
+        <app-current-weather></app-current-weather>
+      </mat-card>
+    </div>
+    <div fvFlex></div>
+  </div>
 </div>
