--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     Your city, your forecast, right now!
   </div>
   <div fxLayoutAlign="center">
-    <app-city-search></app-city-search>
+    <app-city-search (searchEvent)="doSearch($event)"></app-city-search>
   </div>
   <div fxLayout="row" fxLayoutAlign="center">
     <div fvFlex></div>
@@ -15,7 +15,7 @@
         <h2>
           Current Weather
         </h2>
-        <app-current-weather></app-current-weather>
+        <app-current-weather [current] = "currentWeather"></app-current-weather>
       </mat-card>
     </div>
     <div fvFlex></div>
