--- a/src/app/city-search/city-search.component.html
+++ b/src/app/city-search/city-search.component.html
@@ -7,5 +7,8 @@
     <mat-hint>
       Specify country code like 'New York, US'
     </mat-hint>
+    <mat-error *ngIf = "search.invalid">
+      Type 3 or more character to search
+    </mat-error>
   </mat-form-field>
 </form>
